force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_call_method_name__c.field-meta.xml
<CustomField>
    <fullName>AWS_call_method_name__c</fullName>
    <description>Name of the method name</description>
    <label>AWS_call_method_name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>