force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>AWS_Endpoint__c</fullName>
    <description>Endpoint para la generación de la cotización</description>
    <label>AWS Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>