force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Key__c</fullName>
    <label>AWS Key</label>
    <length>45</length>
    <type>Text</type>
</CustomField>