force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_S3_Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>AWS_S3_Bucket_Name__c</fullName>
    <description>S3 bucket name</description>
    <label>AWS S3 Bucket Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>