force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_S3_Host__c.field-meta.xml
<CustomField>
    <fullName>AWS_S3_Host__c</fullName>
    <label>AWS S3 Host</label>
    <length>30</length>
    <type>Text</type>
</CustomField>