force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_S3_Images__c.field-meta.xml
<CustomField>
    <fullName>AWS_S3_Images__c</fullName>
    <description>S3 bucket directory where images are stored</description>
    <label>AWS S3 Images</label>
    <length>20</length>
    <type>Text</type>
</CustomField>