force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_S3_Region__c.field-meta.xml
<CustomField>
    <fullName>AWS_S3_Region__c</fullName>
    <description>S3 Region</description>
    <label>AWS S3 Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>