force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_Secret__c.field-meta.xml
<CustomField>
    <fullName>AWS_Secret__c</fullName>
    <label>AWS Secret</label>
    <length>45</length>
    <type>Text</type>
</CustomField>