force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_template_file__c.field-meta.xml
<CustomField>
    <fullName>AWS_template_file__c</fullName>
    <description>Name of the quote template file</description>
    <label>AWS template file</label>
    <length>80</length>
    <type>Text</type>
</CustomField>