force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_URL_Base__c.field-meta.xml
<CustomField>
    <fullName>AWS_URL_Base__c</fullName>
    <description>URL base HTTP call</description>
    <label>AWS URL Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>