force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_webcontext_name__c.field-meta.xml
<CustomField>
    <fullName>AWS_webcontext_name__c</fullName>
    <description>Name of the web context name defined in web configuration file (web.xml)</description>
    <label>AWS_webcontext_name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>