force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/AWS_webpath__c.field-meta.xml
<CustomField>
    <fullName>AWS_webpath__c</fullName>
    <description>webpath defined as Java AWS annotation</description>
    <label>AWS_webpath</label>
    <length>80</length>
    <type>Text</type>
</CustomField>