force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/Color_FOB_Price__c.field-meta.xml
<CustomField>
    <fullName>Color_FOB_Price__c</fullName>
    <description>Color de la columna FOB Price del documento de cotización. Debe ser en notacion  R,G,B  Ej, 20,34,233</description>
    <label>Color FOB Price</label>
    <length>20</length>
    <type>Text</type>
</CustomField>