force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/Cotizacion_Font_Name__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_Font_Name__c</fullName>
    <label>Cotizacion Font Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>