force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/Cotizacion_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_Font_Size__c</fullName>
    <label>Cotizacion Font Size</label>
    <length>3</length>
    <type>Text</type>
</CustomField>