force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/Id_Doc_Imagen_No_Disponible__c.field-meta.xml
<CustomField>
    <fullName>Id_Doc_Imagen_No_Disponible__c</fullName>
    <label>Id Doc Imagen No Disponible</label>
    <length>20</length>
    <type>Text</type>
</CustomField>