force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/Numero_OLI__c.field-meta.xml
<CustomField>
    <fullName>Numero_OLI__c</fullName>
    <description>If the number of OLI is greater than 200, it should be splitted. This value must be less than or equal to 200.</description>
    <label>Numero OLI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>