force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/Salesforce_Images_DirId__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Images_DirId__c</fullName>
    <label>Salesforce Images DirId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>