force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/Size_Image__c.field-meta.xml
<CustomField>
    <fullName>Size_Image__c</fullName>
    <description>Tamanio permitido de la imagen a subir hacia S3 desde producto - subir imagenes</description>
    <label>Size Image</label>
    <length>8</length>
    <type>Text</type>
</CustomField>