force-app/main/default/objects/AWS_Generacion_Cotizacion__mdt/fields/test_items_to_proc__c.field-meta.xml
<CustomField>
    <fullName>test_items_to_proc__c</fullName>
    <description>Campo usado para pruebas de cotizacion. Para fines de depuracion, se indican los items a ser procesados en el archivo excel  Ej: tst-42  , si se envian 100 items, solo se procesaran 100  Ej: todos  , se procesan todos</description>
    <label>Test Items To Proccess</label>
    <length>8</length>
    <type>Text</type>
</CustomField>